--- a/src/ui/main.fxml
+++ b/src/ui/main.fxml
@@ -38,8 +38,10 @@
       </Label>
       <Label text="Start change file from (leave empty if start from the beginning)" GridPane.rowIndex="2" />
       <TextField id="txtFromTime" fx:id="txtFromTime" promptText="HH:mm:ss" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-      <Label text="Change type" GridPane.rowIndex="4" />
-      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="440.0" spacing="20.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+      <Label layoutX="10.0" layoutY="75.0" text="End change file to (leave empty if stop to the end)" GridPane.rowIndex="4" />
+      <TextField id="txtToTime" fx:id="txtToTime" layoutX="10.0" layoutY="102.0" promptText="HH:mm:ss" GridPane.rowIndex="5" />
+      <Label text="Change type" GridPane.rowIndex="6" />
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="440.0" spacing="20.0" GridPane.columnSpan="2" GridPane.rowIndex="7">
          <children>
             <RadioButton id="rdbAnticipate" fx:id="rdbAnticipate" mnemonicParsing="false" selected="true" text="Anticipate">
                <toggleGroup>
@@ -49,8 +51,8 @@
             <RadioButton id="rdbPosticipate" fx:id="rdbPospone" mnemonicParsing="false" text="Postpone" toggleGroup="$CHANGE_TYPE" />
          </children>
       </HBox>
-      <Label text="Change value" GridPane.rowIndex="7" />
-      <TextField id="txtChangeValue" fx:id="txtChangeValue" promptText="seconds" GridPane.columnSpan="2" GridPane.rowIndex="8" />
-      <Button id="btnSubmit" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnSubmitAction" text="Submit" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9" />
+      <Label text="Change value" GridPane.rowIndex="8" />
+      <TextField id="txtChangeValue" fx:id="txtChangeValue" promptText="seconds" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+      <Button id="btnSubmit" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnSubmitAction" text="Submit" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
    </children>
 </GridPane>
