--- a/src/ui/change.fxml
+++ b/src/ui/change.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -27,6 +28,8 @@
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
    <children>
       <TextField id="txtInputFile" fx:id="txtInputFile" prefHeight="25.0" prefWidth="440.0" GridPane.rowIndex="1" />
@@ -39,7 +42,7 @@
       <Label text="Start change file from (leave empty if start from the beginning)" GridPane.rowIndex="2" />
       <TextField id="txtFromTime" fx:id="txtFromTime" promptText="HH:mm:ss" GridPane.columnSpan="2" GridPane.rowIndex="3" />
       <Label layoutX="10.0" layoutY="75.0" text="End change file to (leave empty if stop to the end)" GridPane.rowIndex="4" />
-      <TextField id="txtToTime" fx:id="txtToTime" layoutX="10.0" layoutY="102.0" promptText="HH:mm:ss" GridPane.rowIndex="5" GridPane.columnSpan="2" />
+      <TextField id="txtToTime" fx:id="txtToTime" layoutX="10.0" layoutY="102.0" promptText="HH:mm:ss" GridPane.columnSpan="2" GridPane.rowIndex="5" />
       <Label text="Change type" GridPane.rowIndex="6" />
       <HBox alignment="CENTER" prefHeight="0.0" prefWidth="440.0" spacing="20.0" GridPane.columnSpan="2" GridPane.rowIndex="7">
          <children>
@@ -53,6 +56,7 @@
       </HBox>
       <Label text="Change value" GridPane.rowIndex="8" />
       <TextField id="txtChangeValue" fx:id="txtChangeValue" promptText="seconds" GridPane.columnSpan="2" GridPane.rowIndex="9" />
-      <Button id="btnSubmit" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnSubmitAction" text="Submit" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
+      <Button id="btnSubmit" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnSubmitAction" text="Submit" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="11" />
+      <ProgressBar fx:id="progress" prefHeight="18.0" prefWidth="506.0" progress="0.0" GridPane.columnSpan="2" GridPane.rowIndex="10" />
    </children>
 </GridPane>
